8335921: Fix HotSpot VM build without JVMTI

Reviewed-by: dholmes, shade